# base-vault-guard

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/vault_guard/: __init__.py  api.py  cache.py  history.py  models.py  risk_collector.py  scanner.py  schemas.py  scorer.py  yield_finder.py
backend/src/vault_guard/ml/: __init__.py  collect.py  data_collector.py  data_generator.py  data_processor.py  ml_scorer.py  retrain.py  trainer.py
backend/src/vault_guard/ml/models/: feature_metadata.json  vault_guard_model.json
backend/tests/: conftest.py  test_api.py  test_data_collector.py  test_ml_scorer.py  test_risk_collector.py  test_scanner.py  test_scorer.py  test_yield_finder.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/safe-yield/: page.tsx
frontend/src/app/vaults/: page.tsx
frontend/src/app/vaults/[address]/: page.tsx
frontend/src/components/: Footer.tsx  GradeHistory.tsx  Header.tsx  RiskBreakdown.tsx  SafetyBadge.tsx  VaultTable.tsx  YieldFinder.tsx
frontend/src/lib/: api.ts  queryClient.ts
