[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-guard"
version = "0.1.0"
description = "AI-powered safety scoring system for DeFi vaults on Base"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "web3>=6.18.0",
    "xgboost>=2.0.3",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "httpx>=0.27.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP017"]  # UP017 uses datetime.UTC which requires Python 3.11+

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
